# RustyML

./: CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  changelog.md
.github/workflows/: clippy.yml  doc.yml  fmt.yml  test.yml
benches/: RESULTS.md  ml_end_to_end.rs  nn_end_to_end.rs  parallel_gates.rs
benches/benchmarks/: eigensolver.rs  matmul_kernels.rs  ml_end_to_end.rs  nn_end_to_end.rs  silhouette.rs
benches/calibrations/: gemm_calibrate.rs
benches/calibrations/parallel_gates/: main.rs  ml_kernels.rs  nn_kernels.rs  trees.rs
benches/parallel_gates/: harness.rs  main.rs  matmul.rs  ml_kernels.rs  nn_kernels.rs  normalization.rs  trees.rs
src/: bench_internals.rs  dataset.rs  error.rs  lib.rs  machine_learning.rs  math.rs  metric.rs  metric_module_test.rs  metrics.rs  neural_network.rs  neural_network_test.rs  parallel_gates.rs  prelude.rs  random.rs  reduction.rs  test.rs  traits.rs  tuning.rs  types.rs  utility.rs  utils.rs
src/dataset/: boston_housing.rs  diabetes.rs  iris.rs  raw_data.rs  titanic.rs  wine_quality.rs
src/dataset/raw_data/: diabetes_raw.rs  iris_raw.rs  titanic_raw.rs  wine_quality_raw.rs
src/machine_learning/: clustering.rs  dbscan.rs  decision_tree.rs  decomposition.rs  discriminant_analysis.rs  ensemble.rs  helper_function.rs  helper_functions.rs  isolation_forest.rs  kmeans.rs  knn.rs  lda.rs  linalg.rs  linear_discriminant_analysis.rs  linear_model.rs  linear_regression.rs  linear_svc.rs  logistic_regression.rs  manifold.rs  mean_shift.rs  meanshift.rs  neighbors.rs  parallel.rs  spatial.rs  svc.rs  svm.rs  traits.rs  tree.rs  types.rs  validation.rs
src/machine_learning/clustering/: dbscan.rs  kmeans.rs  mean_shift.rs
src/machine_learning/decomposition/: kernel_pca.rs  pca.rs
src/machine_learning/discriminant_analysis/: lda.rs
src/machine_learning/ensemble/: isolation_forest.rs
src/machine_learning/linear_model/: linear_regression.rs  logistic_regression.rs
src/machine_learning/manifold/: t_sne.rs
src/machine_learning/neighbors/: knn.rs
src/machine_learning/svm/: linear_svc.rs  svc.rs
src/machine_learning/tree/: decision_tree.rs
src/machine_learning_test/: linear_regression_test.rs  logistic_regression_test.rs
src/math/: decomposition.rs  distance.rs  matmul.rs  reduction.rs
src/metric/: classification.rs  clustering.rs  regression.rs
src/metrics/: classification.rs  clustering.rs  regression.rs
src/neural_network/: activation.rs  layer.rs  layers.rs  loss_function.rs  losses.rs  matmul.rs  neural_network_trait.rs  optimizer.rs  optimizers.rs  parallel_gates.rs  sequential.rs  traits.rs
src/neural_network/layer/: activation_layer.rs  average_pooling.rs  average_pooling_1d.rs  average_pooling_2d.rs  average_pooling_3d.rs  conv1d.rs  conv2d.rs  conv3d.rs  conv_op_helpers.rs  convolution_layer.rs  dense.rs  depthwise_conv2d.rs  flatten.rs  global_average_pooling.rs  global_average_pooling_1d.rs  global_average_pooling_2d.rs  global_average_pooling_3d.rs  global_max_pooling_1d.rs  global_max_pooling_2d.rs  global_max_pooling_3d.rs  gru.rs  helper_function.rs  helper_functions.rs  layer_weight.rs  lstm.rs  max_pooling_1d.rs  max_pooling_2d.rs  max_pooling_3d.rs  padding_type.rs  pooling_layer.rs  recurrent_layer.rs  regularization_layer.rs  separable_conv2d.rs  serialize_weight.rs  shape_helpers.rs  simple_rnn.rs  validation.rs
src/neural_network/layers/: activation.rs  conv_op_helpers.rs  convolution.rs  dense.rs  flatten.rs  layer_weight.rs  pooling.rs  recurrent.rs  regularization.rs  serialize_model.rs  (+3 more)
src/prelude/: dataset_prelude.rs  machine_learning.rs  machine_learning_prelude.rs  math.rs  math_prelude.rs  metric_prelude.rs  metrics.rs  neural_network.rs  neural_network_prelude.rs  utility_prelude.rs  utils.rs
src/test/: machine_learning_test.rs  math_module_test.rs  metric_module_test.rs  neural_network_test.rs  utility_test.rs
src/utility/: kernel_pca.rs  label_encoding.rs  linalg.rs  linear_discriminant_analysis.rs  normalize.rs  principal_component_analysis.rs  standardize.rs  t_sne.rs  train_test_split.rs  validation.rs
src/utils/: kernel_pca.rs  label_encoding.rs  linalg.rs  normalize.rs  pca.rs  standardize.rs  t_sne.rs  train_test_split.rs  validation.rs
tests/: machine_learning_test.rs  math.rs  math_test.rs  metric_test.rs  ml_dbscan_test.rs  ml_decision_tree_test.rs  ml_isolation_forest_test.rs  ml_kmeans_test.rs  ml_knn_test.rs  ml_linear_discriminant_analysis_test.rs  ml_linear_regression_test.rs  ml_linear_svc_test.rs  ml_logistic_regression_test.rs  ml_meanshift_test.rs  ml_svc_test.rs  neural_network_test.rs  nn_activation_test.rs  nn_average_pooling_1d_test.rs  nn_average_pooling_2d_test.rs  nn_average_pooling_3d_test.rs  nn_batch_normalization_test.rs  nn_conv_1d_test.rs  nn_conv_2d_test.rs  nn_conv_3d_test.rs  nn_dense_test.rs  nn_depthwise_conv_2d_test.rs  nn_dropout_test.rs  nn_flatten_test.rs  nn_gaussian_dropout_test.rs  nn_gaussian_noise_test.rs  nn_global_average_pooling_1d_test.rs  nn_global_average_pooling_2d_test.rs  nn_global_average_pooling_3d_test.rs  nn_global_max_pooling_1d_test.rs  nn_global_max_pooling_2d_test.rs  nn_global_max_pooling_3d_test.rs  nn_gradient_check_test.rs  nn_group_normalization_test.rs  nn_gru_test.rs  nn_instance_normalization_test.rs  (+25 more)
tests/machine_learning/: common.rs  dbscan.rs  decision_tree.rs  isolation_forest.rs  kernel_pca.rs  kmeans.rs  knn.rs  linear_discriminant_analysis.rs  linear_regression.rs  linear_svc.rs  logistic_regression.rs  main.rs  mean_shift.rs  ml_infra.rs  pca.rs  svc.rs  t_sne.rs
tests/metrics/: classification.rs  clustering.rs  common.rs  main.rs  regression.rs
tests/neural_network/: activation.rs  common.rs  conv_1d_2d.rs  conv_3d_variants.rs  dense.rs  dropout.rs  gradient_check.rs  losses.rs  main.rs  noise.rs  norm_batch_layer.rs  norm_group_instance.rs  optimizers.rs  pooling_avg.rs  pooling_max.rs  recurrent.rs  reproducibility.rs  sequential.rs  serialize.rs
tests/utils/: common.rs  kernel_pca.rs  label_encoding.rs  main.rs  normalize.rs  pca.rs  standardize.rs  t_sne.rs  train_test_split.rs
(+223 files in other folders)
