[package]
name = "rustyml"
version = "0.11.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["SomeB1oody <stanyin64@gmail.com>"]
description = "A high-performance machine learning & deep learning library in pure Rust, offering ML algorithms and neural network support"
license = "MIT"
readme = "README.md"
keywords = ["machine_learning", "ML", "neural_network", "AI"]
repository = "https://github.com/SomeB1oody/RustyML"
documentation = "https://docs.rs/crate/rustyml"
categories = ["mathematics", "science", "algorithms"]

[features]
# Classical machine learning algorithms for supervised and unsupervised learning
machine_learning = ["math", "dep:ndarray", "dep:rayon", "dep:ndarray-rand", "dep:ahash", "dep:serde", "dep:serde_json"]
# Complete neural network framework with flexible architecture design
neural_network = ["dep:ndarray", "dep:rayon", "dep:ndarray-rand", "dep:indicatif", "dep:serde", "dep:serde_json"]
# Data preprocessing and dimensionality reduction utilities
utility = ["math", "dep:ndarray", "dep:nalgebra", "dep:rayon", "dep:ahash", "dep:serde", "dep:serde_json", "dep:ndarray-rand"]
# Comprehensive evaluation metrics for model performance assessment
metric = ["dep:ndarray", "dep:ahash"]
# Mathematical utilities and statistical functions
math = ["dep:ndarray", "dep:ahash"]
# Access to standardized datasets for experimentation
dataset = ["dep:ndarray"]
# Enables `machine_learning` and `neural_network`
default = ["machine_learning", "neural_network"]
# full access to all modules in the crate
full = ["dataset", "machine_learning", "neural_network", "utility", "math", "metric"]

# Provides support for progress bars in the command line
show_progress = ["dep:indicatif"]

[dependencies]
ndarray = { version = "0.17.2", features = ["rayon", "serde"], optional = true }
nalgebra = { version = "0.34.1", optional = true }
rayon = { version = "1.11.0", optional = true }
ndarray-rand = { version = "0.16.0", optional = true }
ahash = { version = "0.8.12", features = ["serde"], optional = true }
indicatif = { version = "0.18.4", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", optional = true}

[dev-dependencies]
approx = "0.5.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["default"]