[package]
name = "rustyml"
version = "0.12.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["SomeB1oody <stanyin64@gmail.com>"]
description = "A high-performance machine learning & deep learning library in pure Rust, offering ML algorithms and neural network support"
license = "MIT"
readme = "README.md"
keywords = ["machine_learning", "ML", "neural_network", "AI"]
repository = "https://github.com/SomeB1oody/RustyML"
documentation = "https://docs.rs/crate/rustyml"
categories = ["mathematics", "science", "algorithms"]

autotests = false

[features]
# Classical machine learning algorithms for supervised and unsupervised learning
machine_learning = ["math", "dep:ndarray", "dep:nalgebra", "dep:rayon", "dep:ndarray-rand", "dep:ahash", "dep:serde", "dep:serde_json", "dep:thiserror"]
# Complete neural network framework with flexible architecture design
neural_network = ["dep:ndarray", "dep:rayon", "dep:ndarray-rand", "dep:indicatif", "dep:serde", "dep:serde_json", "dep:thiserror"]
# Data preprocessing and dimensionality reduction utilities
utils = ["math", "dep:ndarray", "dep:nalgebra", "dep:rayon", "dep:ahash", "dep:serde", "dep:serde_json", "dep:ndarray-rand", "dep:thiserror"]
# Comprehensive evaluation metrics for model performance assessment
metrics = ["math", "dep:ndarray", "dep:ahash"]
# Mathematical utilities and statistical functions
math = ["dep:ndarray", "dep:ahash"]
# Enables `machine_learning` and `neural_network`
default = ["machine_learning", "neural_network"]
# full access to all modules in the crate
full = ["machine_learning", "neural_network", "utils", "math", "metrics"]

# Provides support for progress bars in the command line
show_progress = ["dep:indicatif"]

[dependencies]
ndarray = { version = "0.17.2", features = ["rayon", "serde"], optional = true }
nalgebra = { version = "0.35.0", optional = true }
rayon = { version = "1.12.0", optional = true }
ndarray-rand = { version = "0.16.0", optional = true }
ahash = { version = "0.8.12", features = ["serde"], optional = true }
indicatif = { version = "0.18.4", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.150", optional = true}
thiserror = { version = "2.0.17", optional = true }

[dev-dependencies]
approx = "0.5.1"

[[test]]
name = "machine_learning"
path = "tests/machine_learning/main.rs"
required-features = ["machine_learning"]

[[test]]
name = "neural_network"
path = "tests/neural_network/main.rs"
required-features = ["neural_network"]

[[test]]
name = "utils"
path = "tests/utils/main.rs"
required-features = ["utils"]

[[test]]
name = "metrics"
path = "tests/metrics/main.rs"
required-features = ["metrics"]

[[test]]
name = "math"
path = "tests/math.rs"
required-features = ["math"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["default"]
