[package]
name = "rustyml"
version = "0.13.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["SomeB1oody <stanyin64@gmail.com>"]
description = "A high-performance machine learning & deep learning library in pure Rust, offering ML algorithms and neural network support"
license = "MIT"
readme = "README.md"
keywords = ["machine_learning", "ML", "neural_network", "AI"]
repository = "https://github.com/SomeB1oody/RustyML"
documentation = "https://docs.rs/crate/rustyml"
categories = ["mathematics", "science", "algorithms"]

autotests = false
autobenches = false

[features]
# Classical machine learning algorithms for supervised and unsupervised learning
machine_learning = ["math", "dep:ndarray", "dep:rayon", "dep:ndarray-rand", "dep:ahash", "dep:serde", "dep:postcard", "dep:thiserror"]
# Complete neural network framework with flexible architecture design
neural_network = ["math", "dep:ndarray", "dep:rayon", "dep:ndarray-rand", "dep:indicatif", "dep:serde", "dep:postcard", "dep:thiserror"]
# Data preprocessing and dimensionality reduction utilities
utils = ["math", "dep:ndarray", "dep:rayon", "dep:ahash", "dep:serde", "dep:postcard", "dep:ndarray-rand", "dep:thiserror"]
# Comprehensive evaluation metrics for model performance assessment
metrics = ["math", "dep:ndarray", "dep:ahash"]
# Mathematical utilities and statistical functions
math = ["dep:ndarray", "dep:ahash", "dep:rayon", "dep:gemm"]
# Enables `machine_learning` and `neural_network`
default = ["machine_learning", "neural_network"]
# full access to all modules in the crate
full = ["machine_learning", "neural_network", "utils", "math", "metrics"]

# Provides support for progress bars in the command line
show_progress = ["dep:indicatif"]

[dependencies]
ndarray = { version = "0.17.2", features = ["rayon", "serde"], optional = true }
rayon = { version = "1.12.0", optional = true }
ndarray-rand = { version = "0.16.0", optional = true }
ahash = { version = "0.8.12", features = ["serde"], optional = true }
indicatif = { version = "0.18.4", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
postcard = { version = "1.1.3", features = ["use-std"], optional = true }
thiserror = { version = "2.0.18", optional = true }
gemm = { version = "0.19.0", features = ["rayon"], optional = true }

[dev-dependencies]
approx = "0.5.1"
criterion = "0.8.2"
# cross-check `math::decomposition` routines
nalgebra = "0.35.0"

[[test]]
name = "machine_learning"
path = "tests/machine_learning/main.rs"
required-features = ["machine_learning"]

[[test]]
name = "neural_network"
path = "tests/neural_network/main.rs"
required-features = ["neural_network"]

[[test]]
name = "utils"
path = "tests/utils/main.rs"
required-features = ["utils"]

[[test]]
name = "metrics"
path = "tests/metrics/main.rs"
required-features = ["metrics"]

[[test]]
name = "math"
path = "tests/math.rs"
required-features = ["math"]


# End-to-end criterion benchmarks over the public neural-network API
[[bench]]
name = "nn_end_to_end"
path = "benches/benchmarks/nn_end_to_end.rs"
harness = false
required-features = ["neural_network"]

# End-to-end criterion benchmarks over the classical-ML/utils public API
[[bench]]
name = "ml_end_to_end"
path = "benches/benchmarks/ml_end_to_end.rs"
harness = false
required-features = ["machine_learning", "utils"]

# Power-iteration eigensolver (PCA / KernelPCA PowerIteration solvers) microbenchmarks
[[bench]]
name = "eigensolver"
path = "benches/benchmarks/eigensolver.rs"
harness = false
required-features = ["utils"]

# Kernel-level GEMM shape sweep through Dense::forward
[[bench]]
name = "matmul_kernels"
path = "benches/benchmarks/matmul_kernels.rs"
harness = false
required-features = ["neural_network"]

# Parallel/serial gate calibration for the conv/pooling/normalization/tree/elementwise kernels
[[bench]]
name = "parallel_gates"
path = "benches/calibrations/parallel_gates/main.rs"
harness = false
required-features = ["machine_learning", "neural_network"]

# gemm-crate serial-vs-rayon crossover calibration (GEMM and GEMV)
[[bench]]
name = "gemm_calibrate"
path = "benches/calibrations/gemm_calibrate.rs"
harness = false
required-features = ["math"]

# silhouette_score pairwise-distance fill (parallel path)
[[bench]]
name = "silhouette"
path = "benches/benchmarks/silhouette.rs"
harness = false
required-features = ["metrics"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["default"]
